[package]
name = "roslibrust"
version = "0.1.0"
authors = ["carter <carter@amprobotics.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
async-trait = "0.1.53"
# Using this branch for unmerged support for constants
codegen = { git = "https://github.com/carter12s/codegen.git", branch = "associated-consts" }
#codegen = "0.1.3"
dashmap = "5.3.4"
futures = "0.3.13"
log = "0.4.14"
rand = "0.8.5"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
# TODO look at reducing tokio features
tokio = { version = "^1.13", features = ["full"] }
tokio-tungstenite = "^0.16"
walkdir = "2.3.2"
thiserror = "1.0.31"

[dev-dependencies]
# Used for logging in examples
simple_logger = "2.1.0"

[features]
# Intended for use with tests, includes tests that rely on a locally running rosbridge
running_bridge = []