[workspace]

members = [
    "example_package",
    "example_package_macro",
    "roslibrust_codegen_macro",
    "roslibrust_codegen",
    "roslibrust_common",
    "roslibrust_genmsg",
    "roslibrust_mock",
    "roslibrust_ros1",
    "roslibrust_rosbridge",
    "roslibrust_test",
    "roslibrust_zenoh",
    "roslibrust",
]
resolver = "2"
