[package]
name = "roslibrust"
version = "0.4.0"
authors = ["carter <carterjschultz@gmail.com>", "ssnover <ssnover95@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "../README.md"
description = "An library for interfacing with the ROS's rosbridge_server"
repository = "https://github.com/Carter12s/roslibrust"
keywords = ["ROS", "robotics", "websocket", "json", "async"]
categories = ["science::robotics"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
dashmap = "5.3"
deadqueue = "0.2"
futures = "0.3"
futures-util = "0.3"
lazy_static = "1.4"
log = "0.4"
proc-macro2 = "1.0"
quote = "1.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = "1.0"
thiserror = "1.0"
tokio = { version = "1.20", features = ["net", "macros", "time", "rt-multi-thread"], optional = true }
tokio-tungstenite = { version = "0.17", optional = true }
uuid = { version = "1.1", features = ["v4"] }
walkdir = "2.3"

[dev-dependencies]
# Used for logging in examples
simple_logger = "2.1.0"
# For generating messages for examples
roslibrust_codegen_macro = { path = "../roslibrust_codegen_macro" }

[features]
default = ["client", "utils"]
client = ["dep:tokio", "dep:tokio-tungstenite"]
codegen = ["utils"]
utils = []
all = ["client", "codegen", "utils"]

# Intended for use with tests, includes tests that rely on a locally running rosbridge
running_bridge = ["client"]

[package.metadata.docs.rs]
features = "all"