[package]
name = "roslibrust"
version = "0.11.1"
authors = ["carter <carterjschultz@gmail.com>", "ssnover <ssnover95@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "../README.md"
description = "An library for interfacing with the ROS's rosbridge_server"
repository = "https://github.com/roslibrust/roslibrust"
keywords = ["ROS", "robotics", "websocket", "json", "async"]
categories = ["science::robotics"]

[dependencies]
# TODO version here
roslibrust_common = { path = "../roslibrust_common" }
roslibrust_ros1 = { path = "../roslibrust_ros1", optional = true }
roslibrust_rosbridge = { path = "../roslibrust_rosbridge", optional = true }
roslibrust_zenoh = { path = "../roslibrust_zenoh", optional = true }
roslibrust_mock = { path = "../roslibrust_mock", optional = true }

[dev-dependencies]
env_logger = "0.11"
test-log = "0.2"
log = "0.4"
tokio = { version = "1.20", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
# Used to generate messages for the examples
roslibrust_codegen = { path = "../roslibrust_codegen" }
roslibrust_codegen_macro = { path = "../roslibrust_codegen_macro" }

[features]
default = []
# Note: all does not include running_bridge as that is only intended for CI
all = []
# Provides a rosapi rust interface
# TODO MAJOR remove this feature
rosapi = []
# Intended for use with tests, includes tests that rely on a locally running rosbridge
running_bridge = []
# For use with integration tests, indicating we are testing integration with a ros1 bridge
ros1_test = ["running_bridge", "ros1"]
# For use with integration tests, indicates we are testing integration with a ros2 bridge
ros2_test = ["running_bridge"]
# Provides a ros1 xmlrpc / TCPROS client
ros1 = ["roslibrust_ros1"]
# Provides a backend using the rosbridge websocket protocol
rosbridge = ["roslibrust_rosbridge"]
# Provides a backend using zenoh's ros1 format from zenoh-bridge-ros1
zenoh = ["roslibrust_zenoh"]
# Provides a mock backend useful for writing tests around nodes
mock = ["roslibrust_mock"]

[package.metadata.docs.rs]
features = ["ros1"]
