[package]
name = "roslibrust_codegen"
version = "0.7.0"
edition = "2021"
authors = ["carter <carterjschultz@gmail.com>", "ssnover <ssnover95@gmail.com>"]
license = "MIT"
readme = "../README.md"
description = "An library for generating rust type definitions from ROS IDL files"
repository = "https://github.com/Carter12s/roslibrust"
keywords = ["ROS", "robotics", "websocket", "json", "async"]
categories = ["science::robotics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
log = "0.4"
md5 = "0.7"
proc-macro2 = "1.0"
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = "1.0"
tokio = { version = "1.0", features = ["time", "signal"], optional = true}
walkdir = "2.3"
xml-rs = "0.8"

[features]
default = ["tokio"]
all = ["tokio"]
# Enables support for tokio time conversions
tokio = [ "dep:tokio" ]
# For use with CI environment or any environment with ROS1 installed
ros1_test = []
# For use with CI environment or any environment with ROS2 installed
ros2_test = []
# TODO do this!
# # Enables support for chrono time conversions
# chrono = []