[package]
name = "roslibrust_codegen_macro"
edition = "2021"
description = "Provides macro-based message generation for roslibrust"
version = "0.2.0"
repository = "https://github.com/Carter12s/roslibrust"
license = "MIT"
readme = "README.md"
authors = ["ssnover <ssnover95@gmail.com>", "carter schultz <carterjschultz@gmail.com"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
roslibrust_codegen = "0.2.0"
#roslibrust_codegen = { path = "../roslibrust_codegen" }
syn = "1.0"
