[package]
name = "roslibrust_codegen_macro"
edition = "2021"
description = "Provides macro-based message generation for roslibrust"
version = "0.3.0"
repository = "https://github.com/Carter12s/roslibrust"
license = "MIT"
readme = "README.md"
authors = ["ssnover <ssnover95@gmail.com>", "Carter12s <carterjschultz@gmail.com>"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
roslibrust = { version = "0.4.0", default-features = false, features = ["codegen"] }
#roslibrust = { path = "../roslibrust", default-features = false, features = ["codegen"] }
syn = "1.0"
# TODO this dependency is due to issue in deadqueue's cargo.toml can be removed in future
tokio = { version = "1", features = ["macros"] }
