[package]
name = "roslibrust_common"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
# Used for md5sum calculation
md5 = "0.7"

# THESE DEPENDENCIES WILL BE REMOVED
# We're currently leaking these error types in the "generic error type"
# We'll clean this up
tokio = { version = "1.41", features = ["time"] }
tokio-tungstenite = { version = "0.17" }
serde_json = "1.0"
