[package]
name = "roslibrust_genmsg"
version = "0.1.0"
edition = "2021"

[lib]
name = "roslibrust_genmsg"
path = "src/lib.rs"

[[bin]]
name = "gencpp"
path = "src/main.rs"

[dependencies]
clap = { version = "4.1", features = ["derive"] }
env_logger = "0.11"
itertools = "0.12"
lazy_static = "1.4"
log = "0.4"
minijinja = "2.0"
roslibrust_codegen = { path = "../roslibrust_codegen" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
const_format = "0.2"