[package]
name = "roslibrust_genmsg"
version = "0.9.0"
edition = "2021"
license = "MIT"
readme = "../README.md"
description = "A tool for generating source code from ROS message definitions"
repository = "https://github.com/Carter12s/roslibrust"
keywords = ["ROS", "robotics", "codegen", "genmsg"]
categories = ["science::robotics"]

[lib]
name = "roslibrust_genmsg"
path = "src/lib.rs"

[[bin]]
name = "gencpp"
path = "src/main.rs"

[dependencies]
clap = { version = "4.1", features = ["derive"] }
env_logger = "0.11"
itertools = "0.12"
lazy_static = "1.4"
log = "0.4"
minijinja = "2.0"
roslibrust_codegen = { path = "../roslibrust_codegen", version = "0.10.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
const_format = "0.2"
