[package]
name = "roslibrust_mock"
version = "0.1.0"
edition = "2021"

[dependencies]
roslibrust_common = { path = "../roslibrust_common" }
tokio = { version = "1.41", features = ["sync", "rt-multi-thread", "macros"] }
# Used for serializing messages
bincode = "1.3"
# We add logging to aid in debugging tests
log = "0.4"

[dev-dependencies]
roslibrust_codegen = { path = "../roslibrust_codegen" }
roslibrust_codegen_macro = { path = "../roslibrust_codegen_macro" }
