[package]
name = "roslibrust_rospack"
description = "Re-implementation of ROS1's rospack to support various utilities."
version = "0.2.0"
edition = "2021"
authors = ["ssnover <ssnover95@gmail.com>", "Carter Schultz <carterjschultz@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Carter12s/roslibrust"

[dependencies]

[[test]]
name = "rospack_package_search"
path = "tests/package_search.rs"
