[package]
name = "roslibrust_zenoh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.41", features = ["rt-multi-thread", "sync", "macros"] }
roslibrust_common = { path = "../roslibrust_common" }
zenoh = "1.0"
hex = "0.4"
anyhow = "1.0"
roslibrust_serde_rosmsg = "0.4"
log = "0.4"

[dev-dependencies]
env_logger = "0.11"
# Used to access traits for examples
roslibrust = { path = "../roslibrust" }
# Used to generate message types for the examples
roslibrust_codegen_macro = { path = "../roslibrust_codegen_macro" }
# Relied on by generate types in the macro this should be cleaned up
roslibrust_codegen = { path = "../roslibrust_codegen" }
