<package format="2">
  <name>test_msgs</name>
  <version>1.2.4</version>
  <description>
    This package provides foo capability.
  </description>
  <maintainer email="carter@notreal.email">Carter</maintainer>
  <license>BSD</license>
  <!-- This line is required for this package to be recognized as ROS2 -->
  <buildtool_depend>ament_cmake</buildtool_depend>
</package>